--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,135 @@
 :root {
-  --primary-text-color: #ffffff;
-  --additional-text-color:#212121;
+  --primary-white-color: #ffffff;
+  --primary-text-color: #212121;
   --paragraph-text-color: #757575;
   --accent-color: #2196f3;
 }
+ul {
+  list-style-type: none;
+}
 
-.body {
-  background-color: var(--primary-text-color);
-  color: var(--additional-text-color);
+button {
+  cursor: pointer;
 }
+
+body {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+
+/*Header*/
+
+.web {
+  color: var(--accent-color);
+}
+
 .logo {
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
+}
+
+.logo:hover {
   color: var(--accent-color);
 }
-.header-element {
-  color: var(--accent-color);
-}
-.header-mail {
-  color var(--accent-color);
-}
-.header-phone {
-  color: var(--title-text-color);
-}
-.footer-adress {
+
+.nav-elements {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  cursor: pointer;
   color: var(--primary-text-color);
 }
-.footer-mail {
-  color: rgba(255, 255, 255, 0.6);
+
+.nav-elements:hover {
+  color: var(--accent-color);
 }
-.footer-phone {
-  color: rgba(156, 155, 155, 0.6);
+
+.contact-header {
+  font-weight: 500;
+  line-height: 1.14;
+  color: var(--paragraph-text-color);
+  text-decoration: none;
 }
-p {
+
+.contact-header.hoover {
+  color: var(--accent-color);
+}
+
+/*Hero*/
+
+.hero-section {
+  background-color: #2f303a;
+}
+
+.theme {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  color: var(--primary-white-color);
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+.hero-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  color: var(--primary-white-color);
+}
+
+/*Main advantages*/
+
+.advantages {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+}
+
+.advantages-details {
+  font-size: 14px;
+  line-height: 2;
   color: var(--paragraph-text-color);
 }
-ul {
-  list-style: none;
+
+/*Our activity*/
+
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+/*Наша команда*/
+
+.name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+
+.profession {
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--paragraph-text-color);
+}
+
+/*Footer*/
+
+.adress {
+  line-height: 2;
+  color: var(--primary-white-color);
+}
+
+.contact-footer {
+  font-family: Roboto;
+  line-height: 1.71;
+  color: var(--paragraph-text-color);
+  text-decoration: none;
 }
